Bug 1369904 - Bounding box should not include control points. r=lsalzman